make sections visible as soon as toggling code has been initialised (bug 37619)
there have been various reports of the toggling code running and allowing sections
to be expanded but not read. To remedy this problem lets reset the opacity as soon
as the toggling code is initialised. If an exception is thrown or there is a script
loading problem after the toggling code has run but before all scripts have finished
running the sections will be readable

--- a/stylesheets/sections.css
+++ b/stylesheets/sections.css
@@ -27,6 +27,10 @@ Change-Id: I683d029d09340a460b02016c5c4fbd6ada5a9b35
 	opacity: 0.2;
 }
 
+.page-loading.togglingEnabled .section {
+	opacity: 1;
+}
+
 .page-loading.togglingEnabled .section_heading button {
 	display: none;
 }
